# typedb-docs

./: .bazelrc  .gitignore  0-index.md  BUILD  README.md  WORKSPACE  antora.yml  index.html  index.md  nohup.out
.circleci/: config.yml  deploy-docs.py
.factory/: automation.yml
.github/: CODEOWNERS
.grabl/: automation.yml
00-general/: 01-example.md  02-docs.md  03-introduction.md  04-quickstart.md  05-data-model.md
00-get-started/: quickstart-tutorial.md
0001-typedb/: 02-docs.md
001-typedb/: 01-overview.md  02-install-and-run.md  03-quickstart.md  04-drivers-and-apis.md  05-roadmap.md
001-typedb-old/: 01-overview.md  02-install-and-run.md  03-quickstart.md  04-drivers-and-apis.md  05-roadmap.md
01-running-grakn/: 01-install-and-run.md  03-configuration.md
01-running-typedb/: 01-install-and-run.md  03-configuration.md
02-clients/: 00-clients.md  01-studio.md  02-console.md  03-java-ref.md  03-java.md  031-java-install.md  032-java-tutorial.md  033-java-api-ref.md  034-java-query-builder.md  04-python-ref.md  05-nodejs.md  06-other-languages.md  07-new-client.md  08-api.md
02-console/: 01-console.md
02-running-grakn/: 01-install-and-run.md  01-install-n-run.md  02-console.md  03-configuration.md
02-running-typedb-cluster/: 01-install-and-run.md  02-kubernetes-deployment.md
03-client-api/: 00-overview.md  01-java.md  02-python.md  03-nodejs.md  04-new-client.md  04-new.md  04-other-languages.md  05-new-client.md
03-console/: 01-console.md
04-client-api/: 01-java.md  (+3 more)
drivers-src/modules/ROOT/partials/tutorials/cpp/: CMakeLists.txt  main.cpp
(+2368 files in other folders)
